--- a/eUseControl.Web/Views/Login/Index.cshtml
+++ b/eUseControl.Web/Views/Login/Index.cshtml
@@ -53,8 +53,8 @@
                     <span class="help-block small">Your strong password</span>
                 </div>
                 <div>
-                    <button class="btn btn-accent">Login</button>
-                    <a class="btn btn-default" href="register.html">Register</a>
+                    <button class="btn btn-accent" value="submit" type="submit">Login</button>
+                    <a class="btn btn-default" href="@Url.Action("Index","Register")">Register</a>
                 </div>
             }
         </div>
