--- a/eUseControl.Web/Views/Register/Index.cshtml
+++ b/eUseControl.Web/Views/Register/Index.cshtml
@@ -1,46 +1,99 @@
 ﻿@{
     ViewBag.Title = "Register";
 }
+@using System.Web.Optimization
+@model eUseControl.Web.Models.UserRegister
 
 <div class="login-form">
-    <form>
-        <div class="form-group row">
-            <label for="name" class="col-sm-4 col-form-label">Name</label>
-            <div class="col-sm-10">
-                <input type="text" class="form-control" id="name">
-            </div>
-        </div>
-        <div class="form-group row">
-            <label for="username" class="col-sm-4 col-form-label">Surname</label>
-            <div class="col-sm-10">
-                <input type="text" class="form-control" id="surname">
-            </div>
-        </div>
-        <div class="form-group row">
-            <label for="username" class="col-sm-4 col-form-label">Username</label>
-            <div class="col-sm-10">
-                <input type="text" class="form-control" id="username">
-            </div>
-        </div>
-        <div class="form-group row">
-            <label for="inputEmail3" class="col-sm-4 col-form-label">Email</label>
-            <div class="col-sm-10">
-                <input type="email" class="form-control" id="inputEmail3">
-            </div>
-        </div>
-        <div class="form-group row">
-            <label for="inputPassword3" class="col-sm-4 col-form-label">Password</label>
-            <div class="col-sm-10">
-                <input type="password" class="form-control" id="inputPassword3">
-            </div>
-        </div>
-        <div class="form-group row">
-            <div class="col-sm-10">
-                <div class="button-wrapper">
-                    <button type="submit" class="btn btn-primary">Register</button>
+
+    <!--
+         <form>
+            <div class="form-group row">
+                <label for="name" class="col-sm-4 col-form-label">Name</label>
+                <div class="col-sm-10">
+                    <input type="text" class="form-control" id="name">
                 </div>
             </div>
+            <div class="form-group row">
+                <label for="username" class="col-sm-4 col-form-label">Surname</label>
+                <div class="col-sm-10">
+                    <input type="text" class="form-control" id="surname">
+                </div>
+            </div>
+            <div class="form-group row">
+                <label for="username" class="col-sm-4 col-form-label">Username</label>
+                <div class="col-sm-10">
+                    <input type="text" class="form-control" id="username">
+                </div>
+            </div>
+            <div class="form-group row">
+                <label for="inputEmail3" class="col-sm-4 col-form-label">Email</label>
+                <div class="col-sm-10">
+                    <input type="email" class="form-control" id="inputEmail3">
+                </div>
+            </div>
+            <div class="form-group row">
+                <label for="inputPassword3" class="col-sm-4 col-form-label">Password</label>
+                <div class="col-sm-10">
+                    <input type="password" class="form-control" id="inputPassword3">
+                </div>
+            </div>
+            <div class="form-group row">
+                <div class="col-sm-10">
+                    <div class="button-wrapper">
+                        <button type="submit" class="btn btn-primary">Register</button>
+                    </div>
+                </div>
+            </div>
+        </form>
+    -->
+    @Html.ValidationSummary(true)
+    @using (Html.BeginForm("Index", "Register", FormMethod.Post, new { @id = "RegisterForm" }))
+    {
+        @Html.AntiForgeryToken()
+        <div class="form-group">
+            @Html.LabelFor(m => m.Username, new { @class = "control-label" })
+            @Html.TextBoxFor(m => m.Username, new
+       {
+           placeholder = "example@gmail.com",
+           title = "Please enter you username",
+           value = "",
+           name = "username",
+           id = "username",
+           @class = "form-control"
+       })
+            <span class="help-block small">Your unique username to app</span>
         </div>
-    </form>
+        <div class="form-group">
+            @Html.LabelFor(m => m.Email, new { @class = "control-label" })
+            @Html.TextBoxFor(m => m.Email, new
+       {
+           @class = "form-control",
+           type = "email",
+           title = "Your email",
+           value = "",
+           name = "email",
+           id = "email"
+       })
+            <span class="help-block small">Your email</span>
+        </div>
+        <div class="form-group">
+            @Html.LabelFor(m => m.Password, new { @class = "control-label" })
+            @Html.TextBoxFor(m => m.Password, new
+       {
+           @class = "form-control",
+           type = "password",
+           title = "Please enter your password",
+           placeholder = "******",
+           value = "",
+           name = "password",
+           id = "password"
+       })
+            <span class="help-block small">Your strong password</span>
+        </div>
+        <div>
+            <button class="btn btn-accent" value="submit" type="submit">Register</button>
+            <a class="btn btn-default" href="@Url.Action("Index","Login")">Login</a>
+        </div>
+    }
 </div>
-
