--- a/eUseControl.Web/Views/Shared/_Layout.cshtml
+++ b/eUseControl.Web/Views/Shared/_Layout.cshtml
@@ -44,3 +44,4 @@
     @RenderSection("scripts", required: false)
 </body>
 </html>
+<script src="https://kit.fontawesome.com/ce8d884e76.js" crossorigin="anonymous"></script>
