--- a/eUseControl.Web/Views/Login/Index.cshtml
+++ b/eUseControl.Web/Views/Login/Index.cshtml
@@ -1,71 +1,57 @@
 ﻿@{
-    Layout = "~/Views/Shared/_Layout_Blank.cshtml";
     ViewBag.Title = "Login";
 }
 
 @using System.Web.Optimization
 @model eUseControl.Web.Models.UserLogin
 
-<div class="container-center animated slideInDown">
-    <div class="view-header">
-        <div class="header-icon">
-            <i class="pe page-header-icon pe-7s-unlock"></i>
-        </div>
-        <div class="header-title">
-            <h3>Login</h3>
-            <small>
-                Please enter your credentials to login.
-            </small>
-        </div>
-    </div>
 
-    <div class="panel panel-filled">
-        <div class="panel-body">
-            @Html.ValidationSummary(true)
-            @using (Html.BeginForm("Index", "Login", FormMethod.Post, new { @id = "LoginForm" }))
-            {
-                @Html.AntiForgeryToken()
-                <div class="form-group">
-                    @Html.LabelFor(m => m.Username, new { @class = "control-label" })
-                    @Html.TextBoxFor(m => m.Username, new
-               {
-                   placeholder = "example@gmail.com",
-                   title = "Please enter you username",
-                   value = "",
-                   name = "username",
-                   id = "username",
-                   @class = "form-control"
-               })
-                    <span class="help-block small">Your unique username to app</span>
-                </div>
-                <div class="form-group">
-                    @Html.LabelFor(m => m.Password, new { @class = "control-label" })
-                    @Html.TextBoxFor(m => m.Password, new
-               {
-                   @class = "form-control",
-                   type = "password",
-                   title = "Please enter your password",
-                   placeholder = "******",
-                   value = "",
-                   name = "password",
-                   id = "password"
-               })
-                    <span class="help-block small">Your strong password</span>
-                </div>
-                <div>
-                    <button class="btn btn-accent" value="submit" type="submit">Login</button>
-                    <a class="btn btn-default" href="@Url.Action("Index","Register")">Register</a>
-                </div>
-            }
-        </div>
+<div class="login-form">
+    <div class="panel-body">
+        @Html.ValidationSummary(true)
+        @using (Html.BeginForm("Index", "Login", FormMethod.Post, new { @id = "LoginForm" }))
+        {
+            @Html.AntiForgeryToken()
+            <div class="form-group">
+                @Html.LabelFor(m => m.Username, new { @class = "control-label" })
+                @Html.TextBoxFor(m => m.Username, new
+           {
+               placeholder = "example@gmail.com",
+               title = "Please enter you username",
+               value = "",
+               name = "username",
+               id = "username",
+               @class = "form-control"
+           })
+                <span class="help-block small">Your unique username to app</span>
+            </div>
+            <div class="form-group">
+                @Html.LabelFor(m => m.Password, new { @class = "control-label" })
+                @Html.TextBoxFor(m => m.Password, new
+           {
+               @class = "form-control",
+               type = "password",
+               title = "Please enter your password",
+               placeholder = "******",
+               value = "",
+               name = "password",
+               id = "password"
+           })
+                <span class="help-block small">Your strong password</span>
+            </div>
+            <div class="button-wrapper">
+                <button class="btn btn-primary" value="submit" type="submit">Login</button>
+                <a class="btn btn-primary" href="@Url.Action("Index","Register")">Register</a>
+            </div>
+        }
     </div>
-
 </div>
 
 
 
 @section Scripts {
     @Scripts.Render("~/bundles/validation/js")
+    @Scripts.Render("~/bundles/jquery/js")
 
     <script type="text/javascript">
         $(function () {
