--- a/eUseControl.Web/Views/Register/Index.cshtml
+++ b/eUseControl.Web/Views/Register/Index.cshtml
@@ -1,52 +1,11 @@
 ﻿@{ 
     ViewBag.Title = "Register";
+    Layout = "~/Views/Shared/_Layout_Blank.cshtml";
 }
 @using System.Web.Optimization
 @model eUseControl.Web.Models.UserRegister
 
 <div class="login-form">
-
-    <!--
-         <form>
-            <div class="form-group row">
-                <label for="name" class="col-sm-4 col-form-label">Name</label>
-                <div class="col-sm-10">
-                    <input type="text" class="form-control" id="name">
-                </div>
-            </div>
-            <div class="form-group row">
-                <label for="username" class="col-sm-4 col-form-label">Surname</label>
-                <div class="col-sm-10">
-                    <input type="text" class="form-control" id="surname">
-                </div>
-            </div>
-            <div class="form-group row">
-                <label for="username" class="col-sm-4 col-form-label">Username</label>
-                <div class="col-sm-10">
-                    <input type="text" class="form-control" id="username">
-                </div>
-            </div>
-            <div class="form-group row">
-                <label for="inputEmail3" class="col-sm-4 col-form-label">Email</label>
-                <div class="col-sm-10">
-                    <input type="email" class="form-control" id="inputEmail3">
-                </div>
-            </div>
-            <div class="form-group row">
-                <label for="inputPassword3" class="col-sm-4 col-form-label">Password</label>
-                <div class="col-sm-10">
-                    <input type="password" class="form-control" id="inputPassword3">
-                </div>
-            </div>
-            <div class="form-group row">
-                <div class="col-sm-10">
-                    <div class="button-wrapper">
-                        <button type="submit" class="btn btn-primary">Register</button>
-                    </div>
-                </div>
-            </div>
-        </form>
-    -->
     @Html.ValidationSummary(true)
     @using (Html.BeginForm("Index", "Register", FormMethod.Post, new { @id = "RegisterForm" }))
     {
